# TABLE_CONFIG_AGENT

./: .env  Dockerfile  README.md  environment-dev.yaml  environment-dev.yml  environment.yaml  model.yaml  params.yaml  pyproject.toml
docs/: cli.md  model.md
k8s/: deployment.yaml
src/qa_vector_database/: example_cfg.py  template_examples.py
src/table_config_agent/: model_cfg.py  params_cfg.py  slim_cfg.py  template_examples.py  utils.py  yaml_tk.py
src/table_config_agent/chroma_db/: build.py  template_examples.py
src/table_config_agent/core/: chain.py  llms.py  utils.py  yaml_tk.py
src/table_config_agent/models/: model_cfg.py  slim_cfg.py  template_cfg.py
src/table_config_agent/ui/: cli.py
tests/: test_slim_to_template.py
