[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table-config-agent"
version = "0.1.0"
description = "Agent for building Basic Tablassert TableConfigs"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name="Skye Lane Goetz", email="skye.lane.goetz@gmail.com" },
]

[tool.setuptools.packages]
find = { where = ["."] }

[project.scripts]
cli = "src.table_config_agent.ui.cli:main"